--- a/src/index.ejs
+++ b/src/index.ejs
@@ -46,6 +46,6 @@
     System.import('@react-mf/root-config');
     System.import('@react-mf/styleguide');
   </script>
-  <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
+  <import-map-overrides-full></import-map-overrides-full>
 </body>
 </html>
